# tradeai-signals

./: .env.example  .gitignore  README.md  middleware.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json  vitest.config.ts
__tests__/: ia-signals.test.ts  signal-features.test.ts
api/python/: signals.py
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/api/signals/: route.ts
app/auth/callback/: route.ts
app/cookies/: page.tsx
app/dashboard/: layout.tsx  page.tsx
app/dashboard/account/: page.tsx
app/login/: page.tsx
app/pricing/: page.tsx
app/privacy/: page.tsx
app/signals/: page.tsx
app/signup/: page.tsx
app/success/: page.tsx
app/terms/: page.tsx
app/verify-email/: page.tsx
bot-worker/: requirements.txt  worker.py
components/: analytics-provider.tsx  manage-subscription-button.tsx  pricing-button.tsx  providers.tsx  pwa-register.tsx
components/auth/: login-form.tsx  signup-form.tsx
components/dashboard/: dashboard-shell.tsx  signals-dashboard.tsx
components/marketing/: email-capture.tsx  faq-section.tsx  footer.tsx  hero.tsx  landing-demo.tsx  navbar.tsx  pricing-section.tsx  testimonials.tsx
components/ui/: button.tsx
lib/: email.ts  i18n.tsx  ia-signals-demo.ts  ia-signals-types.ts  ia-signals.ts  market-data.ts  offline-cache.ts  signal-features.ts  stripe.ts  subscription.ts  telegram.ts  yahoo.ts
lib/supabase/: client.ts  server.ts
public/: manifest.json  sw.js
supabase/migrations/: 001_initial.sql  003_subscriptions.sql  004_telegram.sql
types/: database.ts
(+11 files in other folders)
