[project]
name = "tradeai-signals-python"
version = "0.1.0"
description = "Optional FastAPI signal bot for TradeAI (same repo as Next.js)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "yfinance>=0.2.40",
  "numpy>=1.26.0",
]

[tool.setuptools]
packages = []
